tests/ui/feature-gates/feature-gate-log_syntax2.rs
fn main() {
    println!("{:?}", log_syntax!()); //~ ERROR `log_syntax!` is not stable
}
